# rusty_ledger

./: .dockerignore  .gitignore  API.md  CODE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh
.sqlx/: query-2e45d71a6fc7f7800f428d5fc5c68cefd9b49d97e8e5deba6bc22ba07233bfcc.json  query-307319a05b2c1da2ad0c5a877ff3b1fad3f3e971f678d0d755eab069cb23e03b.json  query-3ef5ec222c182afbd93a889d7a877a542318ebffff4ffd69b442bc4aadb132b3.json  query-53d29e1cc8417b97d744a4a71a97a0fd5869dcbb0e21b93a04a53ad3454c30ed.json  query-5575bd4e1475c40acd8c2873e3b8c72634f1a3287506a48656e2eb31ce435e46.json  query-55d17c62a8783bb8786e5013934d0a58784c926e317427df6a0a783a2b4cc85a.json  query-9471daef598fa5972d9dc21524d8839a689881adbdd2c3a0d89d0f83be3e78d3.json  query-a96f8b8d518f346b433167c87726659d4db9eead59d583049ba4bb144d432d16.json  query-aebec545aedca9800b0310d9df943e2b3f905c3029d361735b3793393a0081b2.json  query-c448f072dc0c65e96604eae7e46b491e8fc07f7a311f244e4c9c7d2333837328.json  query-c6cf5fdf427d59d22c818b24b9e04e8e55fbb79f6bebad05f31aaa76fe341899.json  query-d4ec9323595bbe4faed83d75a411f86e5ec249cc487e7fc6b47518b1ea64e860.json  query-dbe1fe4e88bb6e5edfddd54b8ae9714a642b412f75aa7d22bd344cd50d0c323d.json  query-e18b894a3a28ea9cd4fcde6965e40f4b4e842b5f851324601106cd6346333b37.json  query-f377d1e85da3214c028e7c2b452fe5a03dc55591aad999b00e3a1e9c2284f423.json
migrations/: 20250517084623_init.down.sql  20250517084623_init.up.sql  20250517084624_add_password.down.sql  20250517084624_add_password.up.sql  20250517084625_audit_log.down.sql  20250517084625_audit_log.up.sql
(+8 files in other folders)
