[package]
name = "rusty_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.4", features=["macros"]}
tokio = { version="1.45.0", features=["full"] }
dotenv = "0.15.0"
anyhow = "1.0.98"
sqlx = { version="0.8.5", features=["postgres", "runtime-tokio", "tls-native-tls", "uuid", "time", "bigdecimal"] }
serde = "1.0.219"
serde_json = "1.0.140"
time = { version="0.3.41", features=["serde"] }
rand = { version="0.9.1", features=["serde"] }
uuid = { version="1.16.0", features=["serde"] }
bigdecimal = { version="0.4.8", features=["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
http-body-util = "0.1.3"
tower = "0.5.2"
